--- a/index.html
+++ b/index.html
@@ -18,15 +18,12 @@
             <a href="https://open.spotify.com/user/nrpfmr4mjczuwusvm7bq4n9nv">Spotify</a>
         </div>
     </nav>
-    <div class="banner">
+    <div class='banner'>
         <h1>DataBase</h1>
         <h2>Quality Web Development</h2>
     </div>
-    <div class="languages">
-        <h1>Languages</h1>
-        <a href="#">HTML</a>
-        <a href="#">CSS</a>
-        <a href="#">JavaScript</a>
-    </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.0/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.0/ScrollTrigger.min.js"></script>
+    <script src="./app.js"></script>
 </body>
 </html>
