--- a/index.html
+++ b/index.html
@@ -5,8 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DataBase's Portfolio</title>
+    <link rel="stylesheet" href="./main.css">
 </head>
 <body>
-    
+    <nav>
+        <div class="logo">
+            <h3>DataBase</h3>
+        </div>
+        <div class="links">
+            <a href="#">About</a>
+            <a href="#">Languages</a>
+            <a href="#">Tools</a>
+            <a href="#">Contact</a>
+        </div>
+    </nav>
+    <div class="banner"></div>
 </body>
 </html>
