--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
             <a href="#" class="contact">Contact</a>
         </div>
     </nav>
-    <div class="banner"></div>
+    <div class="container">
+        <div class="parallax"></div>
+        <div class="banner">
+            <h1>DataBase</h1>
+        </div>
+    </div>
+    
 </body>
 </html>
