--- a/index.html
+++ b/index.html
@@ -9,22 +9,28 @@
 </head>
 <body>
     <nav>
-        <div class="logo">
+        <div id="logo">
             <h3>DataBase</h3>
         </div>
-        <div class="links">
+        <div id="links">
             <a href="#">About</a>
             <a href="#">Languages</a>
             <a href="#">Tools</a>
-            <a href="#" class="contact">Contact</a>
+            <a href="#" id="contact">Contact</a>
         </div>
     </nav>
-    <div class="container">
-        <div class="parallax"></div>
-        <div class="banner">
+    <div id="container">
+        <div id="parallax"></div>
+    
+        <div id="banner">
             <h1>DataBase</h1>
+            <h2>Web Development to it's Fullest</h2>
         </div>
     </div>
     
+    <div id="about">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi eveniet, ipsam quo deleniti deserunt esse repellat tenetur voluptas facere quis quibusdam et numquam id expedita nulla, sunt aliquam! Modi quo deserunt, voluptates necessitatibus at fuga ipsum aperiam repellendus tenetur aliquam voluptatum repudiandae ipsam, earum tempora, nulla soluta, saepe fugiat mollitia!</p>
+    </div>
+    <script src="./index.js"></script>
 </body>
 </html>
