--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <a href="#">About</a>
             <a href="#">Languages</a>
             <a href="#">Tools</a>
-            <a href="#" id="contact">Contact</a>
+            <a href="#">Contact</a>
         </div>
     </nav>
     <div id="container">
