--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </div>
     
     <div id="about">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi eveniet, ipsam quo deleniti deserunt esse repellat tenetur voluptas facere quis quibusdam et numquam id expedita nulla, sunt aliquam! Modi quo deserunt, voluptates necessitatibus at fuga ipsum aperiam repellendus tenetur aliquam voluptatum repudiandae ipsam, earum tempora, nulla soluta, saepe fugiat mollitia!</p>
+        <p>vel molestias quasi eveniet neque quod placeat recusandae quisquam. eius eos ratione quis ut saepe quaerat iusto doloribus fugiat pariatur iure quaerat. Veritatis neque error iusto vel odit Perspiciatis reprehenderit nihil molestiae nesciunt officiis vel. corporis obcaecati neque fugit Sit libero dolorum libero consequuntur voluptas veniam cumque. amet exercitationem praesentium temporibus quam molestias corporis modi. amet accusantium non alias error aliquid similique sit aut Sit dolorem a repudiandae.</p>
     </div>
     <script src="./index.js"></script>
 </body>
