--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <h3>DataBase</h3>
         </div>
         <div id="links">
-            <a href="#">About</a>
+            <a href="#" id="about_link">About</a>
             <a href="#">Languages</a>
             <a href="#">Tools</a>
             <a href="#">Contact</a>
