--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <h3>DataBase</h3>
         </div>
         <div id="links">
-            <a href="#" id="about_link">About</a>
+            <a href="#about" id="about_link">About</a>
             <a href="#">Languages</a>
             <a href="#">Tools</a>
             <a href="#">Contact</a>
@@ -29,7 +29,7 @@
     </div>
     
     <div id="about">
-        <p>vel molestias quasi eveniet neque quod placeat recusandae quisquam. eius eos ratione quis ut saepe quaerat iusto doloribus fugiat pariatur iure quaerat. Veritatis neque error iusto vel odit Perspiciatis reprehenderit nihil molestiae nesciunt officiis vel. corporis obcaecati neque fugit Sit libero dolorum libero consequuntur voluptas veniam cumque. amet exercitationem praesentium temporibus quam molestias corporis modi. amet accusantium non alias error aliquid similique sit aut Sit dolorem a repudiandae.</p>
+        <p>Hi, I'm DataBase, I'm a self taught programmer.</p>
     </div>
     <script src="./index.js"></script>
 </body>
