--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <h3>DataBase</h3>
         </div>
         <div id="links">
-            <a href="#about" id="about_link">About</a>
+            <a href="https://google.com" id="about_link">About</a>
             <a href="#">Languages</a>
             <a href="#">Tools</a>
             <a href="#">Contact</a>
@@ -29,7 +29,10 @@
     </div>
     
     <div id="about">
-        <p>Hi, I'm DataBase, I'm a self taught programmer.</p>
+        <p>Hi, I'm DataBase, I'm a self taught programmer. </p>
+    </div>
+    <div class="languages">
+        
     </div>
     <script src="./index.js"></script>
 </body>
