--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         </div>
         <div id="links">
             <a href="#about" id="about_link">About</a>
-            <a href="#">Languages</a>
-            <a href="#">Tools</a>
-            <a href="#">Contact</a>
+            <a href="#languages">Languages</a>
+            <a href="#tools">Tools</a>
+            <a href="#contact">Contact</a>
         </div>
     </nav>
     <div id="container">
@@ -33,6 +33,12 @@
     </div>
     <div class="languages">
 
+    </div>
+    <div class="tools">
+        
+    </div>
+    <div class="contact">
+        
     </div>
     <script src="./index.js"></script>
 </body>
