--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DataBase's Portfolio</title>
     <link rel="stylesheet" href="media/fontawesome-free-5.12.0-web.css">
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="main.css" />
   </head>
   <body>
     <nav>
@@ -19,19 +19,19 @@
         </div class="link-div">
         <ul class="links">
           <li>
-            <a href="#container">home</a>
+            <a href=".container">home</a>
           </li>
           <li>
-            <a href="#about">about</a>
+            <a href=".about">about</a>
           </li>
           <li>
-            <a href="#tools">tools</a>
+            <a href=".tools">tools</a>
           </li>
           <li>
-            <a href="#projects">projects</a>
+            <a href=".projects">projects</a>
           </li>
           <li>
-              <a href="#contact">contact</a>
+              <a href=".contact">contact</a>
           </li>
         </ul>
       </div>
