--- a/index.html
+++ b/index.html
@@ -44,6 +44,21 @@
             <h2>Web Development to it's Fullest</h2>
         </div>
     </div>
+    <div class="container">
+
+    </div>
+    <div class="about">
+
+    </div>
+    <div class="tools">
+
+    </div>
+    <div class="projects">
+
+    </div>
+    <div class="contact">
+      
+    </div>
     <script src="index.js"></script>
   </body>
 </html>
