--- a/index.html
+++ b/index.html
@@ -19,19 +19,19 @@
         </div class="link-div">
         <ul class="links">
           <li>
-            <a href=".container">home</a>
+            <a href="#container">home</a>
           </li>
           <li>
-            <a href=".about">about</a>
+            <a href="#about">about</a>
           </li>
           <li>
-            <a href=".tools">tools</a>
+            <a href="#tools">tools</a>
           </li>
           <li>
-            <a href=".projects">projects</a>
+            <a href="#projects">projects</a>
           </li>
           <li>
-              <a href=".contact">contact</a>
+              <a href="#contact">contact</a>
           </li>
         </ul>
       </div>
@@ -44,19 +44,19 @@
             <h2>Web Development to it's Fullest</h2>
         </div>
     </div>
-    <div class="container">
+    <div id="container">
 
     </div>
-    <div class="about">
+    <div id="about">
 
     </div>
-    <div class="tools">
+    <div id="tools">
 
     </div>
-    <div class="projects">
+    <div id="projects">
 
     </div>
-    <div class="contact">
+    <div id="contact">
       
     </div>
     <script src="index.js"></script>
