--- a/index.html
+++ b/index.html
@@ -45,7 +45,13 @@
         </div>
     </div>
     <div id="about">
-
+      <p>
+        Hi, I'm DataBase, a self-taught programmer. Impedit Provident placeat modi suscipit suscipit enim suscipit quis ratione. aliquam voluptas sed explicabo doloribus harum commodi totam Ipsa consectetur. hic Provident dolorum recusandae provident aliquam maiores excepturi est dolorem. earum blanditiis dolorem quasi voluptatum reprehenderit explicabo ad veniam temporibus saepe quaerat veniam. numquam Ipsa placeat nesciunt non Provident est aliquam quasi quam quaerat quaerat. dolorem enim aliquam est odit quod maiores sapiente Perspiciatis.
+pariatur officia quas sed exercitationem Nulla nihil tempora voluptas. dolorem suscipit quod obcaecati nesciunt optio doloribus adipisci officia dolorum Impedit accusantium Voluptatem. libero Impedit aut sit harum dolorem amet vel. quasi consequuntur neque quis consequuntur doloribus amet officiis explicabo modi. Possimus rerum rerum a minima Perspiciatis consequuntur modi dolorum maxime cumque. dolorem omnis Officiis provident cupiditate dolorem excepturi quo Provident Perspiciatis commodi exercitationem. fugiat praesentium consectetur Veritatis magni officia ipsum harum voluptates.
+adipisci praesentium iure consequuntur non modi excepturi officia Impedit optio dolorem. Veritatis sed ratione eaque maxime placeat doloremque maiores quasi optio quas. hic error modi commodi blanditiis sapiente molestiae saepe dolorum nemo quasi explicabo. hic est quisquam fugit minima placeat exercitationem tenetur explicabo. aliquid laborum officiis dolorem molestias modi eaque esse.
+quasi quam sit laudantium culpa ipsum Nulla culpa eveniet ipsum excepturi. velit quaerat enim explicabo ut harum officiis cupiditate omnis eius quibusdam. magni sint cupiditate odit quia laudantium aliquid molestias voluptate omnis fugit voluptas libero. vel ut nemo quia adipisci exercitationem labore sapiente voluptas similique iure. doloribus Nulla recusandae consectetur dolorum veniam quasi temporibus neque exercitationem maxime. officia laborum sunt cupiditate blanditiis architecto fugiat provident. obcaecati expedita numquam Impedit nihil Nulla sint voluptates eaque eos.
+laborum Voluptatem eaque neque quo ratione ab nihil. ad accusantium eligendi aliquam earum Officiis nemo iusto omnis. alias deleniti libero recusandae quam optio esse Voluptatem nesciunt molestiae. non esse fugiat enim vel fuga quaerat velit ut nihil aut. Officiis eos excepturi magni error hic expedita tempora fuga blanditiis voluptate eius eos.
+      </p>
     </div>
     <div id="tools">
 
