--- a/index.html
+++ b/index.html
@@ -6,17 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DataBase's Portfolio</title>
     <link rel="stylesheet" href="media/fontawesome-free-5.12.0-web.css">
-    <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="main.css">
   </head>
-  <body>
+<body>
     <nav>
-      <div class="nav-center">
-        <div class="nav-header">
+      <!-- <div class="nav-center"> -->
+        <!-- <div class="nav-header"> -->
           <h3 class="logo">DataBase</h3>
-          <button class="nav-toggle">
-            <i class="fas fa-bars"></i>
-          </button>
-        </div class="link-div">
+        <!-- </div> -->
         <ul class="links">
           <li>
             <a href="#container">home</a>
@@ -34,7 +31,7 @@
               <a href="#contact">contact</a>
           </li>
         </ul>
-      </div>
+      <!-- </div> -->
     </nav>
     
     <div id="container">
