--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <h3 class="logo">DataBase</h3>
       <ul class="links">
         <li>
-          <a href="#container">home</a>
+          <a href="#banner">home</a>
         </li>
         <li>
           <a href="#about">about</a>
@@ -30,14 +30,12 @@
       </ul>
     </nav>
     
-    <div id="container">
-        <div class="parallax"></div>
-        <div class="banner">
+    <div id="banner">
             <h1>DataBase</h1>
             <h2>Web Development to it's Fullest</h2>
-        </div>
     </div>
     <div id="about">
+      <h2>About</h2>
       <p>
         Hi, I'm DataBase, a self-taught programmer. Impedit Provident placeat modi suscipit suscipit enim suscipit quis ratione. aliquam voluptas sed explicabo doloribus harum commodi totam Ipsa consectetur. hic Provident dolorum recusandae provident aliquam maiores excepturi est dolorem. earum blanditiis dolorem quasi voluptatum reprehenderit explicabo ad veniam temporibus saepe quaerat veniam. numquam Ipsa placeat nesciunt non Provident est aliquam quasi quam quaerat quaerat. dolorem enim aliquam est odit quod maiores sapiente Perspiciatis.
 pariatur officia quas sed exercitationem Nulla nihil tempora voluptas. dolorem suscipit quod obcaecati nesciunt optio doloribus adipisci officia dolorum Impedit accusantium Voluptatem. libero Impedit aut sit harum dolorem amet vel. quasi consequuntur neque quis consequuntur doloribus amet officiis explicabo modi. Possimus rerum rerum a minima Perspiciatis consequuntur modi dolorum maxime cumque. dolorem omnis Officiis provident cupiditate dolorem excepturi quo Provident Perspiciatis commodi exercitationem. fugiat praesentium consectetur Veritatis magni officia ipsum harum voluptates.
@@ -47,6 +45,7 @@ laborum Voluptatem eaque neque quo ratione ab nihil. ad accusantium eligendi ali
       </p>
     </div>
     <div id="tools">
+      <h2>Languages</h2>
 
     </div>
     <div id="projects">
