--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DataBase's Portfolio</title>
     <link rel="stylesheet" href="media/fontawesome-free-5.12.0-web.css">
+    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
+    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/solid.css">
     <link rel="stylesheet" href="main.css">
   </head>
 <body>
@@ -46,7 +48,6 @@ laborum Voluptatem eaque neque quo ratione ab nihil. ad accusantium eligendi ali
     </div>
     <div id="tools">
       <h2>Languages</h2>
-
     </div>
     <div id="projects">
 
