--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DataBase's Portfolio</title>
     <link rel="stylesheet" href="media/fontawesome-free-5.12.0-web.css">
-    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
-    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/solid.css">
+    <script src="https://kit.fontawesome.com/33916bfa5f.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="main.css">
   </head>
 <body>
@@ -48,6 +47,10 @@ laborum Voluptatem eaque neque quo ratione ab nihil. ad accusantium eligendi ali
     </div>
     <div id="tools">
       <h2>Languages</h2>
+      <a href="https://github.com/DataBase137"><i class="fab fa-github"></i></a>
+      <a href="https://discord.gg/mtx"><i class="fab fa-discord"></i></a>
+      <a href="https://codepen.io/DataBase"><i class="fab fa-codepen"></i></a>
+      <a href="mailto:dev.database137@outlook.com"><i class="fas fa-envelope"></i></a>
     </div>
     <div id="projects">
 
