--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <div class="info">
             <h1>DataBase</h1>
             <p>Web Development and Design</p>
-            <a href="#contact" class="contact-btn">Contact Me<i class="uil uil-envelope"></i></a>
+            <a href="mailto:dev.database137@outlook.com" class="contact-btn">Contact Me<i class="uil uil-envelope"></i></a>
       </div>
       <div class="head-image">
       <img src="assets/head.png" alt="Developer Image">
