--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     
     <div id="about">
       <div class="about-image">
-        <img src="assets/image.png" alt="Developer Image">
+        <img src="assets/about.png" alt="Developer Image">
       </div>
       <div class="about-text">
         <h2>About Me</h2>
@@ -60,7 +60,13 @@
       </div>
     </div>
     <div id="tools">
-      
+      <div class="tools-text">
+        <h2>Tools</h2>
+        <p>Languages: HTML, CSS, JavaScript, Python.<br>Tools: VSCode, Github, Netlify</p>
+      </div>
+      <div class="tools-image">
+        <img src="assets/tools.png" alt="Developing Image">
+      </div>
     </div>
     <div id="projects">
 
