--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
       <li>
         <a href="#tools">tools</a>
       </li>
-      <li>
+      <!-- <li>
         <a href="#projects">projects</a>
-      </li>
+      </li> -->
       <li>
         <a href="#contact">contact</a>
       </li>
@@ -68,9 +68,9 @@
         <img src="assets/tools.png" alt="Developing Image">
       </div>
     </div>
-    <div id="projects">
+    <!-- <div id="projects">
 
-    </div>
+    </div> -->
     <div id="contact">
       
     </div>
