--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <div class="head-text">
             <h1>DataBase</h1>
             <p>Web Development and Design</p>
-            <a href="mailto:dev.database137@outlook.com" class="btn contact-btn">Contact Me<i class="fas fa-envelope"></i></a>
+            <a href="#contact" class="btn contact-btn">Contact Me<i class="fas fa-envelope"></i></a>
       </div>
       <div class="head-image">
       <img src="assets/head.png" alt="Developer Image">
