--- a/index.html
+++ b/index.html
@@ -72,8 +72,28 @@
 
     </div> -->
     <div id="contact">
-      
+      <div class="contact-image">
+        <img src="assets/contact.png" alt="Developer Image">
+      </div>
+      <div class="contact-text">
+        <div>
+          <div class="contact-info">
+            <i class="fab fa-discord contact-icon"></i>
+            <div>
+              <h3 class="contact-title">Discord</h3>
+              <span class="contact-subtitle">DataBase#8984</span>
+            </div>
+          </div>
+          <div class="contact-info">
+            <i class="fas fa-envelope contact-icon icon-big"></i>
+            <div>
+              <h3 class="contact-title">Email</h3>
+              <span class="contact-subtitle">dev.database137@outlook.com</span>
+            </div>
+          </div>
+        </div>
     </div>
     <script src="index.js"></script>
   </body>
+
 </html>
