--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       </li>
     </ul>
     <div class="socials">
-      <a href="https://discord.gg/mtx"><i class="fab fa-discord"></i></a>
+      <a href="https://discord.gg/V2w3gVG34C"><i class="fab fa-discord"></i></a>
       <a href="https://github.com/DataBase137"><i class="fab fa-github"></i></a>
       <a href="https://codepen.io/DataBase"><i class="fab fa-codepen"></i></a>
     </div>
