--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <div id="tools">
       <div class="tools-text">
         <h2>Tools</h2>
-        <p>Languages: HTML, CSS, JavaScript, Python.<br>Tools: VSCode, Github, Netlify</p>
+        <p>Languages: HTML, CSS, JavaScript, ReactJS,<br>Node.js, MySQL, Python<br>Tools: VSCode, Github, Netlify</p>
       </div>
       <div class="tools-image">
         <img src="assets/tools.png" alt="Developing Image">
