Added _blank target to all links

--- a/index.html
+++ b/index.html
@@ -32,12 +32,11 @@
       </li>
     </ul>
     <div class="socials">
-      <a href="https://discord.gg/37sCXPsAM2"><i class="fab fa-discord"></i></a>
-      <a href="https://github.com/DataBase137"><i class="fab fa-github"></i></a>
-      <a href="https://codepen.io/DataBase"><i class="fab fa-codepen"></i></a>
+      <a href="https://discord.gg/37sCXPsAM2" target="_blank"><i class="fab fa-discord"></i></a>
+      <a href="https://github.com/DataBase137" target="_blank"><i class="fab fa-github"></i></a>
+      <a href="https://codepen.io/DataBase" target="_blank"><i class="fab fa-codepen"></i></a>
     </div>
   </nav>
-    
     <div id="head">
       <div class="head-text">
             <h1>DataBase</h1>
