Updated Codepen URL

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="socials">
       <a href="https://discord.gg/37sCXPsAM2" target="_blank"><i class="fab fa-discord"></i></a>
       <a href="https://github.com/DataBase137" target="_blank"><i class="fab fa-github"></i></a>
-      <a href="https://codepen.io/DataBase" target="_blank"><i class="fab fa-codepen"></i></a>
+      <a href="https://codepen.io/DataBase137" target="_blank"><i class="fab fa-codepen"></i></a>
     </div>
   </nav>
     <div id="head">
