Updated About Me

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       </div>
       <div class="about-text">
         <h2>About Me</h2>
-        <p>Hey, I'm DataBase, a self-taught programmer. So far I am into more of the frontend stuff, <br> but I am learning NodeJS. Hopefully soon I will be able to make some great projects!</p>
+        <p>Hey, I'm DataBase, a self-taught programmer. I'm currently working on a website <br> design platform called WebZone! Contact me if you have any questions.</p>
         <a href="#tools" class="btn tools-btn">Tools<i class="fas fa-tools"></i></a>
       </div>
     </div>
